# LinearSelector-Validation-Lab

./: .gitignore  CMakeLists.txt  LICENSE  LinearSelector.cu  LinearSelector.hpp  LinearSelectorBenchmark.ipynb  README.md  app_core.cpp  bridge_compressor.py  gui_v149.py  main.cpp  robots.txt  run_benchmark.sh  test_core.cpp
.github/workflows/: build-and-test.yml
github/workflows/: build-and-test.yml
